--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                 </div>
                 <div class="col-5">
                     <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <p class="p-2">A Tropicália foi um movimento cultural que surgiu no Brasil nos anos 60, mais precisamente entre 1967 e 1968. Foi como uma mistura de várias influências, tanto da música quanto da arte e do teatro. O movimento surgiu num momento tenso da política brasileira, durante a ditadura militar, e a galera estava procurando uma forma de protestar contra esse sistema opressor, mas de um jeito criativo e inovador.
+
+                        Os artistas da Tropicália misturavam coisas do Brasil, tipo a música popular brasileira e ritmos regionais, com elementos de outras culturas, como o rock, a música experimental e até influências da arte pop dos Estados Unidos e da Europa. Eles queriam quebrar com os padrões tradicionais e mostrar que a arte pode ser mais livre, mais ousada e, ao mesmo tempo, reflexiva sobre a realidade do país.
+                        
+                        Os principais nomes desse movimento foram Caetano Veloso, Gilberto Gil, Gal Costa, Os Mutantes e Tom Zé, entre outros. A música deles era bem experimental, misturando samba com rock, bossa nova com psicodelia, e isso deu uma nova cara à música brasileira. Além disso, eles usavam muito simbolismo e ironia em suas letras e performances, deixando um recado de que a arte tem o poder de transformar e questionar a sociedade.</p>
                 </div>
             </div>
         </section>
