--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                         Os artistas da Tropicália misturavam coisas do Brasil, tipo a música popular brasileira e ritmos regionais, com elementos de outras culturas, como o rock, a música experimental e até influências da arte pop dos Estados Unidos e da Europa. Eles queriam quebrar com os padrões tradicionais e mostrar que a arte pode ser mais livre, mais ousada e, ao mesmo tempo, reflexiva sobre a realidade do país.
                         
-                        Os principais nomes desse movimento foram Caetano Veloso, Gilberto Gil, Gal Costa, Os Mutantes e Tom Zé, entre outros. A música deles era bem experimental, misturando samba com rock, bossa nova com psicodelia, e isso deu uma nova cara à música brasileira. Além disso, eles usavam muito simbolismo e ironia em suas letras e performances, deixando um recado de que a arte tem o poder de transformar e questionar a sociedade.</p>
+                        Os principais nomes desse movimento foram Caetano Veloso, Gilberto Gil, Gal Costa, Os Mutantes e Tom Zé, entre outros. A música deles era bem experimental, misturando samba com rock, bossa nova com psicodelia, e isso deu uma nova cara à música brasileira. Além disso, eles usavam muito simbolismo e ironia em suas letras e performances, deixando um recado de que a arte tem o poder de transformar e questionar a sociedade. Fonte:Chat Gpt</p>
                 </div>
             </div>
         </section>
