--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi o Tropicalismo?</h2>
+                    <h2>O que é Invincible?</h2>
                     <p class="p-2">Invincible é uma história em quadrinhos criada por Robert Kirkman, o mesmo autor de The Walking Dead, com arte de Cory Walker e, posteriormente, Ryan Ottley. Publicada pela Image Comics entre 2003 e 2018, a HQ acompanha a jornada de Mark Grayson, um jovem aparentemente comum que descobre ter superpoderes herdados de seu pai, Nolan Grayson, também conhecido como Omni-Man, o maior herói da Terra. Inicialmente, Mark encara essa transformação com entusiasmo, inspirado pelo exemplo heroico do pai. No entanto, conforme ele se aprofunda nesse novo mundo, percebe que ser um super-herói é muito mais perigoso e cruel do que ele imaginava.
 
                         Diferente de muitas histórias de super-heróis tradicionais, Invincible se destaca pela sua abordagem mais realista e brutal do gênero. As batalhas são extremamente violentas e as consequências das lutas são mostradas de forma gráfica, algo pouco comum em narrativas desse tipo. Além disso, a história não se limita a confrontos físicos. Ela explora temas como amadurecimento, relações familiares, moralidade e o peso das escolhas, especialmente quando Mark descobre segredos sombrios sobre a real natureza de seu pai e os planos de sua raça, os Viltrumitas.
